Add SignarR and hangfire

--- a/SignalRApplication/appsettings.json
+++ b/SignalRApplication/appsettings.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "HangfireConnection": "Server=(localdb)\\mssqllocaldb;Database=SignarR.HangfireTest;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Hangfire": "Information"
     }
   },
   "AllowedHosts": "*"
