--- a/SignalRApplication/SignalRApplication.csproj
+++ b/SignalRApplication/SignalRApplication.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.7.13" />
+    <PackageReference Include="Hangfire.Core" Version="1.7.13" />
+    <PackageReference Include="Hangfire.SqlServer" Version="1.7.13" />
+  </ItemGroup>
+
 </Project>
